<resources>
    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_movie_details">Movie Details</string>
    <string name="movie_release_date_label">Release date:</string>
    <string name="movie_ratings_label">Ratings:</string>
    <string name="sort_key">sortBy</string>
    <string name="sort_popular">popular</string>
    <string name="sort_top_rated">top_rated</string>
    <string name="sort_now_playing">now_playing</string>
    <string name="sort_upcoming">upcoming</string>
    <string name="sort_favorites">favorites</string>
    <string name="sort_popular_title">Popular</string>
    <string name="sort_top_rated_title">Top rated</string>
    <string name="sort_now_playing_title">Now playing</string>
    <string name="sort_upcoming_title">Upcoming</string>
    <string name="sort_favorites_title">Favorites</string>
    <string name="movie_overview_label">Overview:</string>
    <string name="movie_trailers_label">Trailers:</string>
    <string name="movie_reviews_label">Reviews:</string>
    <string name="menu_share">Share</string>
    <string name="share_title">Share trailer</string>
</resources>
