<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ActivityPopularMovies">
    <item
        android:icon="@drawable/ic_menu_sort_by_size"
        android:title="Sort by"
        android:id="@+id/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_popular"
                    android:title="@string/sort_popular_title" />
                <item
                    android:id="@+id/sort_top_rated"
                    android:title="@string/sort_top_rated_title" />
                <item
                    android:id="@+id/sort_now_playing"
                    android:title="@string/sort_now_playing_title" />
                <item
                    android:id="@+id/sort_upcoming"
                    android:title="@string/sort_upcoming_title" />
                <item
                    android:id="@+id/sort_favorites"
                    android:title="@string/sort_favorites_title" />
            </group>
        </menu>
    </item>
</menu>
